Removed references using px and added subtitles class

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <p class="title">Andres Restrepo</p>
-    <div style="display: flex; flex-direction: row">
-      <div style="display: flex; flex-direction: column">
+    <div style="display: flex; flex-direction: row; justify-content: space-around;">
+      <div style="display: flex; flex-direction: column; justify-content: space-around">
         <div class="title">Work Experience</div>
         <!-- Experience 3-->
-        <div>
-          <p class="title">Software Engineer I</p>
+        <div class="experience-item">
+          <p class="subtitle">Software Engineer I</p>
           <p>Sierra Nevada Corporation</p>
           <p>Centennial, Colorado</p>
           <p>Aug 2022 - Present</p>
@@ -23,8 +23,8 @@
           <p>Other: Webpack, XML, JSON, HTML, CSS.</p>
         </div>
         <!-- Experience 2-->
-        <div>
-          <p class="title">Engineering Technician I</p>
+        <div class="experience-item"> 
+          <p class="subtitle">Engineering Technician I</p>
           <p>Terumo BCT</p>
           <p>Lakewood, Colorado</p>
           <p>Dec 2021 - Jul 2022</p>
@@ -52,8 +52,8 @@
           <p>Other: XML, JSON.</p>
         </div>
         <!-- Experience 1-->
-        <div>
-          <p class="title">Engineering Intern</p>
+        <div class="experience-item">
+          <p class="subtitle">Engineering Intern</p>
           <p>Terumo BCT</p>
           <p>Lakewood, Colorado</p>
           <p>Jul 2021 - Dec 2021</p>
@@ -71,7 +71,7 @@
       <div style="display: flex; flex-direction: column">
       <div class="title">Education</div>
       <!-- Education 1-->
-      <div>
+      <div class="experience-item">
       <p>Metropolitan State University of Denver</p>
       <p>Denver, Colorado</p>
       <p>Major: Mathematics</p>
