Adding title details css class

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Andres Restrepo</title>
+    <title class="title">Andres Restrepo</title>
     <link rel="stylesheet" href="./styles/titles.css" />
   </head>
   <body>
     <p class="title">Andres Restrepo</p>
+    <p class="title-details">
+      <a href="https://github.com/1stprojectalfa" target="_blank">GitHub</a> 
+      <a href="https://www.linkedin.com/in/restrepoandres" target="_blank">LinkedIn</a>
+    </p>
     <div style="display: flex; flex-direction: row; justify-content: space-around;">
       <div style="display: flex; flex-direction: column; justify-content: space-around">
         <div class="title">Work Experience</div>
@@ -72,8 +76,10 @@
       <div class="title">Education</div>
       <!-- Education 1-->
       <div class="experience-item">
+      <p class="subtitle">Bachelors of Science</p>
       <p>Metropolitan State University of Denver</p>
       <p>Denver, Colorado</p>
+      <p>July 2017 - Dec 2020</p>
       <p>Major: Mathematics</p>
       <p>Minor: Computer Science</p>
       </div>
