Updated verbs and added email to header

--- a/index.html
+++ b/index.html
@@ -1,88 +1,103 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title class="title">Andres Restrepo</title>
-    <link rel="stylesheet" href="./styles/titles.css" />
-  </head>
-  <body>
-    <p class="title">Andres Restrepo</p>
-    <p class="title-details">
-      <a href="https://github.com/1stprojectalfa" target="_blank">GitHub</a> 
-      <a href="https://www.linkedin.com/in/restrepoandres" target="_blank">LinkedIn</a>
-    </p>
-    <div style="display: flex; flex-direction: row; justify-content: space-around;">
+   <head>
+      <title class="title">Andres Restrepo</title>
+      <link rel="stylesheet" href="./styles/titles.css" />
+   </head>
+   <body>
+      <p class="title">Andres Restrepo</p>
+      <div class="title-details">
+         <p>andresar47@gmail.com</p>
+      </div>
+      <p class="title-details">
+         <a href="https://github.com/1stprojectalfa" target="_blank">GitHub</a> 
+         <a href="https://www.linkedin.com/in/restrepoandres" target="_blank">LinkedIn</a>
+      </p>
+      <div style="display: flex; flex-direction: row; justify-content: space-around;">
       <div style="display: flex; flex-direction: column; justify-content: space-around">
-        <div class="title">Work Experience</div>
-        <!-- Experience 3-->
-        <div class="experience-item">
-          <p class="subtitle">Software Engineer I</p>
-          <p>Sierra Nevada Corporation</p>
-          <p>Centennial, Colorado</p>
-          <p>Aug 2022 - Present</p>
-          <p>Libraries: Cesium, React, Resium, Socket.IO.</p>
-          <p>Programming Languages: Typescript, Javascript, C#.</p>
-          <p>Streaming Processing: Apache Kafka, ActiveMQ.</p>
-          <p>Source Control: GIT, Bitbucket.</p>
-          <p>CI/CD: Docker, Bamboo.</p>
-          <p>Other: Webpack, XML, JSON, HTML, CSS.</p>
-        </div>
-        <!-- Experience 2-->
-        <div class="experience-item"> 
-          <p class="subtitle">Engineering Technician I</p>
-          <p>Terumo BCT</p>
-          <p>Lakewood, Colorado</p>
-          <p>Dec 2021 - Jul 2022</p>
-          <p>
-            &#x2022; Designing and implementing software automation protocols
-            that test the life expectancy of medical devices and their
-            subassemblies.
-          </p>
-          <p>
-            &#x2022; Troubleshooting and maintaining the configuration files
-            that handle the CAN bus infrastructure of automated testing
-            fixtures.
-          </p>
-          <p>
-            &#x2022; Building and maintaining python scripts that perform the
-            transferring, management and analysis of data logs.
-          </p>
-          <p>
-            &#x2022; Automating tasks in an embedded linux operating system
-            using Bash.
-          </p>
-          <p>Libraries: Pandas, Paramiko, Scikit-Learn.</p>
-          <p>Programming Languages: Python, Bash.</p>
-          <p>Source Control: GIT, GitHub.</p>
-          <p>Other: XML, JSON.</p>
-        </div>
-        <!-- Experience 1-->
-        <div class="experience-item">
-          <p class="subtitle">Engineering Intern</p>
-          <p>Terumo BCT</p>
-          <p>Lakewood, Colorado</p>
-          <p>Jul 2021 - Dec 2021</p>
-          <p>
-            &#x2022; Worked in a Linux based environment in the development of
-            software protocols that interact with the embedded system, pneumatic
-            layouts and electronic configuration of medical devices.
-          </p>
-          <p>Libraries: Pandas.</p>
-          <p>Programming Languages: Python.</p>
-          <p>Source Control: GIT, GitHub.</p>
-          <p>Other: XML.</p>
-        </div>
+         <div class="title">Work Experience</div>
+         <!-- Experience 3-->
+         <div class="experience-item">
+            <p class="subtitle">Software Engineer I</p>
+            <p>Sierra Nevada Corporation</p>
+            <p>Centennial, Colorado: Aug 2022 - Present</p>
+            <p>Libraries: Cesium, React, Redux, Socket.IO, #SNMP.</p>
+            <p>Programming Languages: C#, Java, Javascript, Typescript.</p>
+            <p>Scripting Languages: Bash, Python, Powershell.</p>
+            <p>Message Processing: Apache Kafka.</p>
+            <p>Serialization Languages: JSON, XML.</p>
+            <p>Building Tools: Maven, Webpack.</p>
+            <p>Source Control: Bitbucket, Git.</p>
+            <p>CI/CD: Artifactory, Bamboo, Docker.</p>
+            <p>Commmunication Protocols: HTTP, SNMP, SSH, TCP, Websockets.</p>
+         </div>
+         <!-- Experience 2-->
+         <div class="experience-item">
+            <p class="subtitle">Engineering Technician I</p>
+            <p>Terumo BCT</p>
+            <p>Lakewood, Colorado: Dec 2021 - Jul 2022.</p>
+            <p>
+               &#x2022; Designed and implemented software automation protocols
+               that tested the life expectancy of medical devices and their
+               subassemblies.
+            </p>
+            <p>
+               &#x2022; Troubleshooting and maintaining the configuration files
+               that handle the CAN bus infrastructure of automated testing
+               fixtures.
+            </p>
+            <p>
+               &#x2022; Built and maintained python scripts that performed the
+               transferring, management and analysis of data logs.
+            </p>
+            <p>
+               &#x2022; Automated tasks in an embedded linux operating system
+               using Bash.
+            </p>
+            <p>Libraries: Pandas, Paramiko, Scikit-Learn.</p>
+            <p>Programming Languages: Bash, Python.</p>
+            <p>Source Control: Git, GitHub.</p>
+            <p>Serialization Languages: XML, JSON.</p>
+         </div>
+         <!-- Experience 1-->
+         <div class="experience-item">
+            <p class="subtitle">Engineering Intern</p>
+            <p>Terumo BCT</p>
+            <p>Lakewood, Colorado: Jul 2021 - Dec 2021</p>
+            <p>
+               &#x2022; Worked in a Linux based environment in the development of
+               software protocols that interact with the embedded system, pneumatic
+               layouts and electronic configuration of medical devices.
+            </p>
+            <p>Libraries: Pandas.</p>
+            <p>Programming Languages: Python.</p>
+            <p>Source Control: Git, GitHub.</p>
+            <p>Serialization Languages: XML.</p>
+         </div>
       </div>
       <div style="display: flex; flex-direction: column">
-      <div class="title">Education</div>
-      <!-- Education 1-->
-      <div class="experience-item">
-      <p class="subtitle">Bachelors of Science</p>
-      <p>Metropolitan State University of Denver</p>
-      <p>Denver, Colorado</p>
-      <p>July 2017 - Dec 2020</p>
-      <p>Major: Mathematics</p>
-      <p>Minor: Computer Science</p>
+         <div class="title">Education</div>
+         <!-- Education 1-->
+         <div class="experience-item">
+            <p class="subtitle">Bachelors of Science</p>
+            <p>Metropolitan State University of Denver</p>
+            <p>Denver, Colorado: July 2017 - Dec 2020</p>
+            <p>Major: Mathematics</p>
+            <p>Minor: Computer Science</p>
+         </div>
+         <div class="experience-item">
+            <p class="subtitle">Relevant Coursework</p>
+            <p style="font-weight: 900;">Computer Science</p>
+            <p> 
+              Computer Graphics, Data Structures and Algorithms, Machine Learning, and Software
+              Development Methods and Tools.
+            </p>
+            <p style="font-weight: 900;">Mathematics</p>
+            <p> 
+               Probability and Statistics, Probability Theory, Linear
+               Algebra, Abstract Algebra and Numerical Analysis.  
+            </p>
+         </div>
       </div>
-    </div>
-  </body>
+   </body>
 </html>
