Styling subsections titles for better responsive design on mobile devices.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
   <div class="subtitle">Work Experience</div>
   <!-- Experience-->
   <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Software Engineer II</b></span>
-      <span>Sierra Nevada Corporation</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Centennial, Colorado</span>
-      <span> January 2024</span>
+    <div>
+      <span><b>Software Engineer II</b> &nbsp;&nbsp;&nbsp;&nbsp; Sierra Nevada Corporation &nbsp;&nbsp;&nbsp;&nbsp; Centennial, Colorado &nbsp;&nbsp;&nbsp;&nbsp;January 2024</span>
     </div>
   </div>
   <ul class="experience-item">
@@ -40,13 +35,8 @@
   </ul>
   <!-- Experience-->
   <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Software Engineer I</b></span>
-      <span>Sierra Nevada Corporation</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Centennial, Colorado</span>
-      <span> August 2022 - January 2024</span>
+    <div>
+      <span><b>Software Engineer I</b> &nbsp;&nbsp;&nbsp;&nbsp; Sierra Nevada Corporation &nbsp;&nbsp;&nbsp;&nbsp; Centennial, Colorado &nbsp;&nbsp;&nbsp;&nbsp; August 2022 - January 2024</span>
     </div>
   </div>
   <ul class="experience-item">
@@ -65,14 +55,9 @@
       time positions.</li>
   </ul>
   <!-- Experience-->
-  <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Engineering Technician</b></span>
-      <span>Terumo BCT</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Lakewood, Colorado</span>
-      <span> December 2021 - July 2022</span>
+   <div class="section-title">
+    <div>
+      <span><b>Engineering Technician</b> &nbsp;&nbsp;&nbsp;&nbsp; Terumo BCT &nbsp;&nbsp;&nbsp;&nbsp; Lakewood, Colorado &nbsp;&nbsp;&nbsp;&nbsp; December 2021 - July 2022</span>
     </div>
   </div>
   <ul class="experience-item">
@@ -88,13 +73,8 @@
   </ul>
   <!-- Experience-->
   <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Software Engineering Intern</b></span>
-      <span>Terumo BCT</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Lakewood, Colorado</span>
-      <span> July 2021 - December 2021</span>
+    <div>
+      <span><b>Software Engineering Intern</b> &nbsp;&nbsp;&nbsp;&nbsp; Terumo BCT &nbsp;&nbsp;&nbsp;&nbsp; Lakewood, Colorado &nbsp;&nbsp;&nbsp;&nbsp; July 2021 - December 2021</span>
     </div>
   </div>
   <ul class="experience-item">
@@ -105,13 +85,8 @@
   </ul>
   <!-- Experience-->
   <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Mathematics Teaching Assistant</b></span>
-      <span>Metropolitan State University of Denver</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Denver, Colorado</span>
-      <span> August 2020 - December 2020</span>
+    <div>
+      <span><b>Teaching Assistant</b> &nbsp;&nbsp;&nbsp;&nbsp; Metropolitan State University of Denver &nbsp;&nbsp;&nbsp;&nbsp; Denver, Colorado &nbsp;&nbsp;&nbsp;&nbsp; August 2020 - December 2020</span>
     </div>
   </div>
   <ul class="experience-item">
@@ -120,14 +95,9 @@
   </ul>
   <hr>
   <div class="subtitle">Education</div>
-  <div class="section-title">
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span><b>Bachelor of Science</b></span>
-      <span>Metropolitan State University of Denver</span>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <span> Denver, Colorado</span>
-      <span> December 2020</span>
+   <div class="section-title">
+    <div>
+      <span><b>Bachelor of Science</b> &nbsp;&nbsp;&nbsp;&nbsp; Metropolitan State University of Denver &nbsp;&nbsp;&nbsp;&nbsp; Denver, Colorado &nbsp;&nbsp;&nbsp;&nbsp; December 2020</span>
     </div>
   </div>
   <ul class="experience-item">
