Grammar and phrasing fixes.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <ul class="experience-item">
     <li>Developed features and provided bugfixes in a full stack enviroment that used .NET 6.0 on the backend;
       Typescript and React
-      on the frontend and SNMP for hardware interaction against an ARC 210 radio.</li>
+      on the frontend and SNMP for hardware interactions against a software defined radio.</li>
     <li>Developed a Java based application that acted as middleware between gRPC clients and services subscribed to a
-      Kafka instance.</li>
+      Kafka message broker.</li>
     <li>Conducted a trade study that evaluated the sutability of using Kubernetes to deploy existing services,
       documented results explaining scalibility requirements and provided a set of helm charts as proof of concept.</li>
     <li>Lead a team of 4 Software Engineer Interns in an effort that used Ansible, Bash, Python and Docker Compose to
@@ -47,9 +47,9 @@
       frontend prototype later turned into a reusable frontend core app that got extended by 2 different teams.</li>
     <li>Maintained CI/CD pipelines for the hosting, building and packaging of code using Bash, Bamboo, Bitbucket,
       Docker, Curl, Jfrog, Maven, Npm, .NET 6.0 and Webpack.</li>
-    <li>Maintained the deployment files used in demostrations to internal teams and to external customers; successfully
-      supported demostrations that resulted in the acqusition of 3 different contracts.</li>
-    <li>Maintained Docker files for micro service applications, deployed event driven micro services using
+    <li>Maintained the deployment files used in demonstrations to internal teams and to external customers; successfully
+      supported demonstrations that resulted in the acquisition of 3 different contracts.</li>
+    <li>Maintained Docker files for microservice applications, deployed event driven micro services using
       Docker Compose.</li>
     <li>Mentored 2 Software Engineer Interns in the timespan of two summers, successfully lead both interns into full
       time positions.</li>
@@ -63,7 +63,7 @@
   <ul class="experience-item">
     <li>Used a proprietary C++ based domain language to develop finite state machine routines that tested the life
       expectancy of medical devices and their subassemblies.</li>
-    <li>Used Python to develop scripts that performed the transfering of large sets of data logs within a local area
+    <li>Used Python to develop scripts that performed the transferring of large sets of data logs within a local area
       network.</li>
     <li>Used Python to develop numerical method solutions that transformed the raw output of sensor signals into
       meaningful units.</li>
