Cleaning up degree section.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="subtitle">Education</div>
    <div class="section-title">
     <div>
-      <span><b>Bachelor of Science</b> &nbsp;&nbsp;&nbsp;&nbsp; Metropolitan State University of Denver &nbsp;&nbsp;&nbsp;&nbsp; Denver, Colorado &nbsp;&nbsp;&nbsp;&nbsp; December 2020</span>
+      <span><b>Bachelor of Science</b> &nbsp;&nbsp;&nbsp;&nbsp; Metropolitan State University of Denver &nbsp;&nbsp;&nbsp;&nbsp; Denver, Colorado</span>
     </div>
   </div>
   <ul class="experience-item">
