Grammar and phrasing fixes and addition of item in level 1 role.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     </div>
   </div>
   <ul class="experience-item">
-    <li>Developed features and provided bugfixes in a full stack enviroment that used .NET 6.0 on the backend;
-      Typescript and React
-      on the frontend and SNMP for hardware interactions against a software defined radio.</li>
+    <li>Developed features and provided bugfixes in services on a full stack environment that used Typescript and React
+      on the frontend, .NET 6.0 on the backend, and SNMP for hardware interactions against a software defined radio.</li>
     <li>Developed a Java based application that acted as middleware between gRPC clients and services subscribed to a
       Kafka message broker.</li>
-    <li>Conducted a trade study that evaluated the sutability of using Kubernetes to deploy existing services,
-      documented results explaining scalibility requirements and provided a set of helm charts as proof of concept.</li>
+    <li>Conducted a trade study that evaluated the suitability of using Kubernetes to deploy existing services,
+      documented results explaining scalability requirements and provided a set of helm charts as proof of concept.</li>
     <li>Lead a team of 4 Software Engineer Interns in an effort that used Ansible, Bash, Python and Docker Compose to
       automate
       the deployment and the configuration settings of over 15 microservices. </li>
@@ -43,8 +42,9 @@
     <li>Designed and implemented a backend message exchange framework using C++, PInvoke and .NET 6.0; this framework
       was used as one the main libraries on over 10 microservices that spanned over 2 different projects.
     </li>
-    <li>Created a micro frontend prototype for a React application using Webpack's Module Federation Plugin; micro
+    <li>Created a micro frontend prototype for a React application using Webpack's Module Federation Plugin; this micro
       frontend prototype later turned into a reusable frontend core app that got extended by 2 different teams.</li>
+    <li>Developed a C# based application that simulated orbital data and transmitted data via protobuff messages over a TCP based connection.</li>
     <li>Maintained CI/CD pipelines for the hosting, building and packaging of code using Bash, Bamboo, Bitbucket,
       Docker, Curl, Jfrog, Maven, Npm, .NET 6.0 and Webpack.</li>
     <li>Maintained the deployment files used in demonstrations to internal teams and to external customers; successfully
@@ -90,7 +90,7 @@
     </div>
   </div>
   <ul class="experience-item">
-    <li>Held virtual sessions in which I tutored the students of senior level mathematics courses, used Latex to provide
+    <li>Held virtual sessions in which I tutored the students of senior level mathematics courses, used LaTex to present 
       solutions to exams and proposed problems in class.</li>
   </ul>
   <hr>
@@ -112,9 +112,7 @@
   <div class="subtitle">Proficiencies</div>
   <div class="container">
     <div><i>Programming Languages</i>: C#, Java, Python, Typescript, C++.</div>
-    <div><i>Network Protocols</i>:gRPC, HTTP, TCP, UDP, SNMP, Websockets.</div>
-    <div><i>General</i>: Event Driven Architecture, Object Oriented Programming, Scripting, Unit Testing, Hardware
-      Software Interaction.</div>
+    <div><i>General</i>: Event Driven Architecture, Object Oriented Programming, Scripting, Test Driven Development.</div>
   </div>
 </body>
 <hr>
