Edited education section.

--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
   </div>
   <ul class="experience-item">
     <li>Major: <i>Mathematics</i>; Minor: <i>Computer Science</i>; Honors: <i>Cum Laude</i>.</li>
-    <li><i>Mathematics Coursework</i>: Probability and Statistics, Probability Theory, Linear Algebra, Abstract Algebra
+    <li><i>Mathematics Coursework</i>: Discrete Mathematics, Probability and Statistics, Probability Theory, Linear Algebra, Abstract Algebra
       and Numerical Analysis.</li>
-    <li><i>Computer Science Coursework</i>: Data Structure and Algorithms, Computer Graphics, Machine Learning, and
-      Software Development Methods and
-      Tools.</li>
+    <li><i>Computer Science Coursework</i>: Data Structures and Algorithms, Computer Graphics, Machine Learning, and
+      Software Development Methods.</li>
   </ul>
 </body>
 <hr>
