Adding resume as pdf.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body style="padding-left: 10%; padding-right:10%">
   <p class="title">Andres Restrepo</p>
-  <p class="title-foot"> Westminster, Colorado | andresar47@gmail.com | <a
-      href="https://www.linkedin.com/in/restrepoandres" target="_blank">LinkedIn</a></p>
+  <p class="title-foot"> Westminster, Colorado | andresar47@gmail.com | 
+    <a href="https://www.linkedin.com/in/restrepoandres" target="_blank">LinkedIn</a> | 
+    <a href="./pdf/Andres_Restrepo.pdf" target="_blank">PDF Resume</a> </p>
   <hr>
   <div class="subtitle">Work Experience</div>
   <!-- Experience-->
